--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,11 @@
     "ui": "pnpm dlx shadcn@latest"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.84.2",
     "@tanstack/react-query-devtools": "^5.84.2",
@@ -25,6 +28,7 @@
     "@tanstack/react-router-ssr-query": "^1.131.2",
     "@tanstack/react-start": "^1.131.2",
     "@vitejs/plugin-react": "^5.0.0",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "latest",
