--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,24 +8,23 @@ on:
 
 jobs:
   build:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v3
-    - run: corepack enable
-    - uses: actions/setup-node@v3
-      with:
-        node-version: "22"
-    
-    - run: cd client
-    - run: pnpm install install
-    - run: pnpm build
-      env:
-        NITRO_PRESET: github_pages
-    
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v1
-      with:
-        path: ./.output/public
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - run: corepack enable
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "22"
+      
+      - run: cd client && pnpm install
+      - run: cd client && pnpm build
+        env:
+          NITRO_PRESET: github_pages
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./client/.output/public
 
   deploy:
     needs: build
