--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,9 @@ jobs:
         with:
           node-version: "22"
       
-      - run: cd client && pnpm install
-      - run: cd client && pnpm build
+      - run: cd client
+      - run: pnpm install
+      - run: pnpm build
         env:
           NITRO_PRESET: github_pages
       
