--- a/.github/workflows/main_anomyform.yml
+++ b/.github/workflows/main_anomyform.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+          cd backend
       
       - name: Install dependencies
         run: pip install -r requirements.txt
