--- a/.github/workflows/main_anomyform.yml
+++ b/.github/workflows/main_anomyform.yml
@@ -28,10 +28,11 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-          cd backend
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+        cd backend
+        pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
