--- a/.github/workflows/main_anomyform.yml
+++ b/.github/workflows/main_anomyform.yml
@@ -41,8 +41,11 @@ jobs:
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           JWT_KEY: ${{ secrets.JWT_KEY }}
-          ENVIRONMENT: production
+          ENVIRONMENT: development # Just for test
           COOKIE_DOMAIN: ${{ secrets.COOKIE_DOMAIN }}
+          CLIENT_URL: ${{ secrets.CLIENT_URL }}
+          EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+          EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
