--- a/.github/workflows/main_anomyform.yml
+++ b/.github/workflows/main_anomyform.yml
@@ -46,6 +46,9 @@ jobs:
           CLIENT_URL: ${{ secrets.CLIENT_URL }}
           EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
           EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+          DB_USER: "dummy-user"
+          DB_PASSWORD: "dummy-password"
+          DB_HOST: "dummy-host"
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
